@@ -1,245 +1,5 @@
 import unittest
 
-from zope.testing.cleanup import cleanUp
-
-from repoze.bfg import testing
-
-class TestKARLSecurityPolicy(unittest.TestCase):
-    def setUp(self):
-        cleanUp()
-
-    def tearDown(self):
-        cleanUp()
-
-    def _getTargetClass(self):
-        from karl.security.policy import KARLSecurityPolicy
-        return KARLSecurityPolicy
-
-    def _makeOne(self, *arg, **kw):
-        klass = self._getTargetClass()
-        return klass(*arg, **kw)
-
-    def test_class_implements_ISecurityPolicy(self):
-        from zope.interface.verify import verifyClass
-        from repoze.bfg.interfaces import ISecurityPolicy
-        verifyClass(ISecurityPolicy, self._getTargetClass())
-
-    def test_instance_implements_ISecurityPolicy(self):
-        from zope.interface.verify import verifyObject
-        from repoze.bfg.interfaces import ISecurityPolicy
-        verifyObject(ISecurityPolicy, self._makeOne(lambda *arg: None))
-
-    def test_permits(self):
-        from repoze.bfg.security import Deny
-        from repoze.bfg.security import Allow
-        from repoze.bfg.security import Everyone
-        from repoze.bfg.security import Authenticated
-        from karl.security.policy import VIEW
-        from karl.security.policy import MEMBER_PERMS
-        from karl.security.policy import ALL
-        from karl.security.policy import NO_INHERIT
-        policy = self._makeOne(lambda *arg: [])
-        root = testing.DummyModel()
-        community = testing.DummyModel(__name__='community', __parent__=root)
-        blog = testing.DummyModel(__name__='blog', __parent__=community)
-        root.__acl__ = [
-            (Allow, Authenticated, VIEW),
-            ]
-        community.__acl__ = [
-            (Allow, 'fred', ALL),
-            (Allow, 'wilma', VIEW),
-            NO_INHERIT,
-            ]
-        blog.__acl__ = [
-            (Allow, 'barney', MEMBER_PERMS),
-            (Allow, 'wilma', VIEW),
-            ]
-        policy = self._makeOne(lambda request: request.principals)
-        request = testing.DummyRequest()
-
-        request.principals = ['wilma']
-        result = policy.permits(blog, request, 'view')
-        self.assertEqual(result, True)
-        self.assertEqual(result.context, blog)
-        self.assertEqual(result.ace, (Allow, 'wilma', VIEW))
-        result = policy.permits(blog, request, 'delete')
-        self.assertEqual(result, False)
-        self.assertEqual(result.context, community)
-        self.assertEqual(result.ace, (Deny, Everyone, ALL))
-
-        request.principals = ['fred']
-        result = policy.permits(blog, request, 'view')
-        self.assertEqual(result, True)
-        self.assertEqual(result.context, community)
-        self.assertEqual(result.ace, (Allow, 'fred', ALL))
-        result = policy.permits(blog, request, 'doesntevenexistyet')
-        self.assertEqual(result, True)
-        self.assertEqual(result.context, community)
-        self.assertEqual(result.ace, (Allow, 'fred', ALL))
-
-        request.principals = ['barney']
-        result = policy.permits(blog, request, 'view')
-        self.assertEqual(result, True)
-        self.assertEqual(result.context, blog)
-        self.assertEqual(result.ace, (Allow, 'barney', MEMBER_PERMS))
-        result = policy.permits(blog, request, 'administer')
-        self.assertEqual(result, False)
-        self.assertEqual(result.context, community)
-        self.assertEqual(result.ace, (Deny, Everyone, ALL))
-        
-        request.principals = ['someguy']
-        result = policy.permits(root, request, 'view')
-        self.assertEqual(result, True)
-        self.assertEqual(result.context, root)
-        self.assertEqual(result.ace, (Allow, Authenticated, VIEW))
-        result = policy.permits(blog, request, 'view')
-        self.assertEqual(result, False)
-        self.assertEqual(result.context, community)
-        self.assertEqual(result.ace, (Deny, Everyone, ALL))
-
-        request.principals = []
-        result = policy.permits(root, request, 'view')
-        self.assertEqual(result, False)
-        self.assertEqual(result.context, root)
-        self.assertEqual(result.ace, None)
-
-        request.principals = []
-        context = testing.DummyModel()
-        result = policy.permits(context, request, 'view')
-        self.assertEqual(result, False)
-        
-    def test_principals_allowed_by_permission_direct(self):
-        from repoze.bfg.security import Allow
-        from karl.security.policy import NO_INHERIT
-        context = testing.DummyModel()
-        acl = [ (Allow, 'chrism', ('read', 'write')),
-                NO_INHERIT,
-                (Allow, 'other', 'read') ]
-        context.__acl__ = acl
-        policy = self._makeOne(lambda *arg: None)
-        result = sorted(
-            policy.principals_allowed_by_permission(context, 'read'))
-        self.assertEqual(result, ['chrism'])
-
-    def test_principals_allowed_by_permission(self):
-        from repoze.bfg.security import Allow
-        from repoze.bfg.security import Deny
-        from karl.security.policy import ALL
-        from karl.security.policy import NO_INHERIT
-        root = testing.DummyModel(__name__='', __parent__=None)
-        community = testing.DummyModel(__name__='community', __parent__=root)
-        blog = testing.DummyModel(__name__='blog', __parent__=community)
-        root.__acl__ = [ (Allow, 'chrism', ('read', 'write')),
-                         (Allow, 'other', ('read',)),
-                         (Allow, 'jim', ALL)]
-        community.__acl__ = [  (Deny, 'flooz', 'read'),
-                               (Allow, 'flooz', 'read'),
-                               (Allow, 'mork', 'read'),
-                               (Deny, 'jim', 'read'),
-                               (Allow, 'someguy', 'manage')]
-        blog.__acl__ = [ (Allow, 'fred', 'read'),
-                         NO_INHERIT]
-        
-        policy = self._makeOne(lambda *arg: None)
-        result = sorted(policy.principals_allowed_by_permission(blog, 'read'))
-        self.assertEqual(result, ['fred'])
-        result = sorted(policy.principals_allowed_by_permission(community,
-                                                                'read'))
-        self.assertEqual(result, ['chrism', 'mork', 'other'])
-        result = sorted(policy.principals_allowed_by_permission(community,
-                                                                'read'))
-        result = sorted(policy.principals_allowed_by_permission(root, 'read'))
-        self.assertEqual(result, ['chrism', 'jim', 'other'])
-
-    def test_principals_allowed_by_permission_no_acls(self):
-        policy = self._makeOne(lambda *arg: None)
-        context = testing.DummyModel()
-        result = sorted(policy.principals_allowed_by_permission(context,'read'))
-        self.assertEqual(result, [])
-
-    def test_effective_principals(self):
-        context = testing.DummyModel()
-        request = testing.DummyRequest()
-        request.principals = ['fred']
-        policy = self._makeOne(lambda request: request.principals)
-        result = sorted(policy.effective_principals(request))
-        from repoze.bfg.security import Everyone
-        from repoze.bfg.security import Authenticated
-        self.assertEqual(result,
-                         ['fred', Authenticated, Everyone])
-
-    def test_no_effective_principals(self):
-        context = testing.DummyModel()
-        request = testing.DummyRequest()
-        request.principals = []
-        policy = self._makeOne(lambda request: request.principals)
-        result = sorted(policy.effective_principals(request))
-        from repoze.bfg.security import Everyone
-        self.assertEqual(result, [Everyone])
-
-    def test_authenticated_userid(self):
-        context = testing.DummyModel()
-        request = testing.DummyRequest()
-        request.principals = ['fred']
-        policy = self._makeOne(lambda request: request.principals)
-        result = policy.authenticated_userid(request)
-        self.assertEqual(result, 'fred')
-
-    def test_no_authenticated_userid(self):
-        context = testing.DummyModel()
-        request = testing.DummyRequest()
-        request.principals = []
-        policy = self._makeOne(lambda request: request.principals)
-        result = policy.authenticated_userid(request)
-        self.assertEqual(result, None)
-
-class TestAllPermissionsList(unittest.TestCase):
-    def setUp(self):
-        cleanUp()
-
-    def tearDown(self):
-        cleanUp()
-
-    def _getTargetClass(self):
-        from karl.security.policy import AllPermissionsList
-        return AllPermissionsList
-
-    def _makeOne(self):
-        return self._getTargetClass()()
-
-    def test_it(self):
-        thing = self._makeOne()
-        self.assertEqual(thing.__iter__(), ())
-        self.failUnless('anything' in thing)
-
-class TestGetWhoPrincipals(unittest.TestCase):
-    def _callFUT(self, request):
-        from karl.security.policy import get_who_principals
-        return get_who_principals(request)
-
-    def test_with_creds(self):
-        request = testing.DummyRequest()
-        request.environ = {'repoze.who.identity':
-                           {'repoze.who.userid':'fred', 'groups':['a', 'b']}}
-        result = self._callFUT(request)
-        self.assertEqual(result, ['fred', 'a', 'b'])
-
-    def test_no_creds(self):
-        request = testing.DummyRequest()
-        result = self._callFUT(request)
-        self.assertEqual(result, [])
-
-class TestRepozeWhoKARLSecurityPolicy(unittest.TestCase):
-    def _callFUT(self):
-        from karl.security.policy import RepozeWhoKARLSecurityPolicy
-        return RepozeWhoKARLSecurityPolicy()
-
-    def test_it(self):
-        policy = self._callFUT()
-        from karl.security.policy import get_who_principals
-        self.assertEqual(policy.get_principals, get_who_principals)
-        
-
 class TestACLPathCache(unittest.TestCase):
 
     def _getTargetClass(self):
